# Job_radar

./: .gitignore  .gitignore.txt  DEVLOG.md  README.md  pyproject.toml
config/: sources.json
docs/: NOTES.md
src/app/: main.py
src/app/core/: logging.py
src/app/models/: job.py
src/app/scrapers/: base.py  habr_search.py  rss_search.py
src/app/tools/: import_graph.py  import_map.py
src/job_radar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
